--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.18.1
-fabric_version=0.46.3+1.18
-loader_version=0.12.12
-parchmentmc_version=1.18.1:2022.01.23
+minecraft_version=1.19-rc2
+fabric_version=0.55.0+1.19
+loader_version=0.14.6
+parchmentmc_version=1.18.2:2022.05.22
 
-mod_version=1.0.0
+mod_version=1.0.1
 maven_group=com.stevekung
 archives_base_name=unseencommands
