--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
-org.gradle.jvmargs=-Xmx4G
+# main
+minecraft_version=1.20.1
+parchmentmc_version=1.20.1:2023.08.06
 
-minecraft_version=1.18.1
-fabric_version=0.46.3+1.18
-loader_version=0.12.12
-parchmentmc_version=1.18.1:2022.01.23
-
-mod_version=1.0.1
-maven_group=com.stevekung
+# mod
 archives_base_name=unseencommands
+maven_group=com.stevekung
+mod_version=1.0.2
+
+# deps
+loader_version=0.14.22
